Revision history for E'Mail-Acme

????    2007-07-??
        update manifest to include t/send.t, duh

1123    2007-07-16
        improve tests
        documentation tweaks

822     2007-07-13
        first release; CPAN rejoices
